<resources>
    <string name="app_name">LIPS</string>
    <string name="button_text">Submit</string>
    <string name="Student_name">Priyanka Gehlot</string>
    <string name="Year">Year</string>
    <!--    <string name="profile_image_desc">Profile Image</string>-->
    <!--    <string name="college_logo_desc">College Logo</string>-->
    <!--    <string name="college_name">Lucky Inistute of Professional Study</string>-->
    <!--    <string name="search_hint">Search</string>-->
    <!--    <string name="timetable">Time Table</string>-->
    <string name="document">Documents</string>
    <string name="fees">Fees</string>
    <string name="Profile"> Profile</string>

    <string name="Notes">Notes</string> <!-- For activity_notes.xml -->
    <string name="edit_profile_desc">Edit your profile details</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="email_label">Email</string>
    <string name="department_label">Department</string>
    <string name="year_label">Year</string>
    <string name="notice">Notice Board</string>
    <string name="contact">Contact</string>
    <string name="ask_doubt">Ask Doubt</string>
    <string name="e_learning">E-Learning</string>
    <string name="results">Results</string>
    <string name="library">Library</string>
    <string name="events">Events</string>
    <string name="feedback">Feedback</string>
    <string name="assignments">Assignments</string>
    <string name="exams">Exams</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="Attend"> Attendence</string>

    <string name="Email">info@luckyinstitute.org</string>
    <string name="number">+91-97842-11113</string>
    <string name="address">Kamla Nehru Nagar,First Extension Jodhpur(Raj)</string>
    <string name="documents">Documents</string>
    <string name="msg">For more Information or any kind of help please drop us an email or whatsapp or call by the information given below</string>
    <string name="note_title">Note Title</string>
    <string name="back">Back</string>
    <string name="visibility">Visibility</string>

    <string name="document_title">Document Title</string>
    <string name="document_content_placeholder">Document content goes here...</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="profile">Profile</string>

    <string name="attendance">Attendance</string>
    <string name="notes">Notes</string>
    <string name="academic_calendar">Academic Calendar</string>

    <string name="canteen">Canteen</string>
    <string name="complaint">Complaint</string>
    <string name="lecture_performa">Lecture Performa</string>
    <string name="quiz">Quiz</string>
    <string name="message_to_college">Message to College</string>
    <string name="timetable">Time Table</string>
    <string name="college_logo_desc">College Logo</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="college_name">Lucky Institute of Professional Study</string>

    <string name="fees_structure">Fees</string>
    <string name="back_button">Back</string>
    <string name="total_fees">Total Fees</string>
    <string name="due_date">Due Date: %s</string>
    <string name="fee_breakdown">Fee Breakdown</string>
    <string name="fee_name">Fee Name</string>
    <string name="fees_due">Fees Deposit</string>
    <string name="pay_in">Fees Due</string>
    <string name="pay_now">Pay Now</string>
    <string name="Msg">Drop a message to college administrator and we will respond within 24 hours. For more information please call or WhatsApp at +91 097842-11113</string>
    <string name="download_a_scan_copy_of_all_your_deposited_document_s_to_college_campus_at_time_of_admission">Download a scan copy of all your deposited document(s) to college campus at time of admission.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>